--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <form  onsubmit="dosum(event)">
         <h1 align="center" > Yard Converter</h1>
-                Enter Yard: &nbsp;&nbsp;<input type="number" class="inp" id="n1" placeholder="Allow only Number" class="inp"/ ><br><br>
+                Enter Yard: &nbsp;&nbsp;<input type="number" class="inp" id="n1" placeholder="Allow only Number" class="inp"/ required><br><br>
                 <button type="submit">Convert Yard</button>
     
             </form>
